# deriva-mcp

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  container-mcp-auth-workplan.md  docker-compose.dev.yaml  docker-compose.mcp.yaml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: deploy-erd-browser.yml  deploy-schema-workbench.yml  docker-build.yml  release.yml
apps/erd-browser/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/erd-browser/src/: App.tsx  annotation-registry.ts  catalog-config.ts  ermrest-client.ts  index.css  layout.ts  types.ts  vite-env.d.ts
apps/erd-browser/src/hooks/: useAnnotationDraft.ts
docs/superpowers/plans/: 2026-03-16-rag-integration.md
docs/superpowers/specs/: 2026-03-16-rag-integration-design.md
plugin/.claude-plugin/: plugin.json
plugin/skills/api-naming-conventions/: SKILL.md
plugin/skills/catalog-operations-workflow/: SKILL.md
plugin/skills/catalog-operations-workflow/references/: script-patterns.md
plugin/skills/check-versions/: SKILL.md
plugin/skills/check-versions/scripts/: check_versions.py
plugin/skills/coding-guidelines/: SKILL.md
plugin/skills/configure-experiment/: SKILL.md
plugin/skills/configure-experiment/references/: workflow.md
plugin/skills/create-dataset/: SKILL.md
plugin/skills/create-dataset/references/: bags.md  workflow.md
plugin/skills/create-feature/: SKILL.md
plugin/skills/create-feature/references/: concepts.md  workflow.md
plugin/skills/create-table/: SKILL.md
plugin/skills/create-table/references/: workflow.md
plugin/skills/customize-display/: SKILL.md
plugin/skills/customize-display/references/: common-recipes.md
plugin/skills/dataset-versioning/: SKILL.md
plugin/skills/datasets/create-dataset/: SKILL.md
plugin/skills/datasets/dataset-versioning/: SKILL.md
plugin/skills/datasets/debug-bag-contents/: SKILL.md
plugin/skills/datasets/prepare-training-data/: SKILL.md
plugin/skills/debug-bag-contents/: SKILL.md
plugin/skills/environment/check-versions/: SKILL.md
plugin/skills/execution/run-ml-execution/: SKILL.md
plugin/skills/execution/work-with-assets/: SKILL.md
plugin/skills/experiments/configure-experiment/: SKILL.md
plugin/skills/experiments/new-model/: SKILL.md
plugin/skills/experiments/run-experiment/: SKILL.md
plugin/skills/experiments/write-hydra-config/: SKILL.md
plugin/skills/generate-descriptions/: SKILL.md
plugin/skills/guidelines/api-naming-conventions/: SKILL.md
plugin/skills/guidelines/catalog-operations-workflow/: SKILL.md
plugin/skills/guidelines/coding-guidelines/: SKILL.md
plugin/skills/guidelines/generate-descriptions/: SKILL.md
plugin/skills/guidelines/maintain-experiment-notes/: SKILL.md
plugin/skills/guidelines/semantic-awareness/: SKILL.md
plugin/skills/help/: SKILL.md
plugin/skills/maintain-experiment-notes/: SKILL.md
plugin/skills/manage-vocabulary/: SKILL.md
plugin/skills/manage-vocabulary/references/: patterns.md
plugin/skills/new-model/: SKILL.md
plugin/skills/new-model/references/: runner-interface.md
plugin/skills/notebooks/run-notebook/: SKILL.md
plugin/skills/notebooks/setup-notebook-environment/: SKILL.md
plugin/skills/prepare-training-data/: SKILL.md
plugin/skills/query-catalog-data/: SKILL.md
plugin/skills/query-catalog-data/references/: workflow.md
plugin/skills/route-project-setup/: SKILL.md
plugin/skills/run-experiment/: SKILL.md
plugin/skills/run-experiment/references/: workflow.md
plugin/skills/run-ml-execution/: SKILL.md
plugin/skills/run-ml-execution/references/: concepts.md  workflow.md
plugin/skills/run-notebook/: SKILL.md
plugin/skills/run-notebook/references/: workflow.md
plugin/skills/semantic-awareness/: SKILL.md
plugin/skills/setup-notebook-environment/: SKILL.md
plugin/skills/troubleshoot-execution/: SKILL.md
plugin/skills/troubleshooting/troubleshoot-execution/: SKILL.md
plugin/skills/use-annotation-builders/: SKILL.md
plugin/skills/work-with-assets/: SKILL.md
plugin/skills/write-hydra-config/: SKILL.md
scripts/: docker-build.sh  generate_prompts.py  load_cifar10.py  test-install.sh
src/deriva_mcp/: connection.py  github_docs.py  prompts.py  proxy.py  resources.py  result_cache.py  server.py  tasks.py
src/deriva_mcp/rag/: __init__.py  chunker.py  config.py  crawler.py  data.py  helpers.py  ingester.py  schema.py
src/deriva_mcp/tools/: __init__.py  annotation.py  background_tasks.py  cache.py  catalog.py  data.py  dataset.py  devtools.py  execution.py  feature.py  rag.py  schema.py  vocabulary.py  workflow.py
src/deriva_ml_mcp/: __init__.py  connection.py  github_docs.py  prompts.py  resources.py  server.py  tasks.py
src/deriva_ml_mcp/tools/: __init__.py  annotation.py  auth.py  background_tasks.py  catalog.py  data.py  dataset.py  devtools.py  execution.py  feature.py  schema.py  vocabulary.py  workflow.py
tests/: __init__.py  conftest.py  test_annotation.py  test_background_tasks.py  test_cache_tools.py  test_catalog.py  test_catalog_tools.py  test_connection.py  test_data.py  test_data_tools.py  test_dataset.py  test_dataset_tools.py  test_devtools.py  test_execution.py  test_execution_tools.py  test_feature.py  test_feature_tools.py  test_integration.py  test_load_cifar10.py  test_rag.py  test_rag_data.py  test_rag_helpers.py  test_rag_integration_layers.py  test_rag_schema.py  test_rag_tools.py  test_resources.py  test_result_cache.py  test_schema.py  test_schema_tools.py  test_vocabulary.py  test_vocabulary_tools.py  test_workflow.py  test_workflow_tools.py
(+27 files in other folders)
