[project]
name = "deriva-ml-mcp"
version = "0.1.0"
description = "MCP server for DerivaML - Model Context Protocol interface for Deriva ML workflows"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Deriva ML Team" }
]
keywords = ["mcp", "deriva", "machine-learning", "data-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.2.0",
    "deriva-ml @ git+https://github.com/informatics-isi-edu/deriva-ml.git@refactor-dataset",
    "pydantic>=2.0",
    "pip-system-certs>=5.3",
    "kaggle>=1.8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "pillow>=10.0",
]
scripts = [
    "kaggle>=1.5.0",
    "tqdm>=4.0",
]

[project.scripts]
deriva-ml-mcp = "deriva_ml_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deriva_ml_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require local Deriva server)",
]
