[project]
name = "deriva-mcp"
dynamic = ["version"]
description = "MCP server for Deriva - Model Context Protocol interface for Deriva catalogs and ML workflows"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Deriva ML Team" }
]
keywords = ["mcp", "deriva", "machine-learning", "data-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.2.0",
    "deriva-ml",
    "pydantic>=2.0",
    "pip-system-certs>=5.3",
    "kaggle>=1.8.3",
    "bump-my-version",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "pillow>=10.0",
]
scripts = [
    "kaggle>=1.5.0",
    "tqdm>=4.0",
]

[project.scripts]
deriva-mcp = "deriva_ml_mcp.server:main"
bump-version = "deriva_ml_mcp.bump_version:main"

[build-system]
requires = ["setuptools>=80", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
deriva = {git = "https://github.com/informatics-isi-edu/deriva-py", branch = "typed-interface" }
deriva-ml = { path = "../deriva-ml", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require local Deriva server)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
